# ChangeLog for perl-core/File-Spec
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/ChangeLog,v 1.62 2009/11/10 15:50:12 tove Exp $

  10 Nov 2009; Torsten Veller <tove@gentoo.org> File-Spec-3.31.ebuild:
  Doesnot depend on Module-Build

*File-Spec-3.31 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +File-Spec-3.31.ebuild:
  Version bump via perl-bump experimental tool.

  18 Oct 2009; Brent Baude <ranger@gentoo.org> File-Spec-3.27.01.ebuild:
  Marking File-Spec-3.27.01 ppc64 for bug 285592

*File-Spec-3.30 (11 May 2009)

  11 May 2009; Torsten Veller <tove@gentoo.org> +File-Spec-3.30.ebuild:
  Version bump

  03 May 2009; Markus Meier <maekke@gentoo.org> File-Spec-3.29.ebuild:
  amd64 stable, bug #268198

  02 May 2009; nixnut <nixnut@gentoo.org> File-Spec-3.27.01.ebuild:
  ppc stable #268198

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -File-Spec-3.12.ebuild,
  -File-Spec-3.15.ebuild, -File-Spec-3.24.ebuild:
  Cleanup

  18 Nov 2008; Torsten Veller <tove@gentoo.org> File-Spec-3.12.ebuild,
  File-Spec-3.15.ebuild, File-Spec-3.24.ebuild, File-Spec-3.25.ebuild,
  File-Spec-3.27.01.ebuild, File-Spec-3.29.ebuild:
  New virtuals: ExtUtils-CBuilder module-build

*File-Spec-3.29 (31 Oct 2008)
*File-Spec-3.27.01 (31 Oct 2008)

  31 Oct 2008; Torsten Veller <tove@gentoo.org> +File-Spec-3.27.01.ebuild,
  +File-Spec-3.29.ebuild, -File-Spec-3.2701.ebuild:
  Version bump. Renamed 3.2701 to 3.27.01

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> File-Spec-3.2701.ebuild:
  alpha/ia64/sparc/x86 stable

*File-Spec-3.2701 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +File-Spec-3.2701.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> File-Spec-3.25.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> File-Spec-3.25.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> File-Spec-3.25.ebuild: