@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/File-Temp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/ChangeLog,v 1.42 2009/07/07 02:20:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Temp/ChangeLog,v 1.43 2009/12/04 11:48:48 fauli Exp $
+
+  04 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
+  File-Temp-0.22.ebuild:
+  x86 stable, bug 288026
 
   07 Jul 2009; Jeroen Roovers <jer@gentoo.org> File-Temp-0.20.ebuild:
   Stable for HPPA too.
