@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/File-Spec
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/ChangeLog,v 1.62 2009/11/10 15:50:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/File-Spec/ChangeLog,v 1.63 2009/12/04 11:46:55 fauli Exp $
+
+  04 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
+  File-Spec-3.30.ebuild:
+  x86 stable, bug 288026
 
   10 Nov 2009; Torsten Veller <tove@gentoo.org> File-Spec-3.31.ebuild:
   Doesnot depend on Module-Build
